Новый вариант решения без pagination старый приставка _old_ver

--- a/2.1_HomeWork/models_list_displaying/templates/books/book_list.html
+++ b/2.1_HomeWork/models_list_displaying/templates/books/book_list.html
@@ -22,13 +22,13 @@
     {% if is_paginated %}
     <div class="pagination">
         <span class="page-links">
-          {% if page_obj.has_previous %}
+          {% if previous_page %}
               <a href={{previous_page}}><< {{previous_page}}</a>
           {%else%}
             <span><< Ничего нет</span>
           {% endif %}
-            <span></span>
-          {% if page_obj.has_next %}
+            <span>|</span>
+          {% if next_page %}
             <a href={{next_page}}>{{next_page}} >></a>
             {%else%}
             <span>Ничего нет >></span>
