--- a/3.2_HomeWork/auth_and_reg_users/templates/base.html
+++ b/3.2_HomeWork/auth_and_reg_users/templates/base.html
@@ -9,13 +9,13 @@
     <link type="text/css" rel="stylesheet" href="{% static "css/style.css" %}"  media="screen,projection"/>
 
     <!--Let browser know website is optimized for mobile-->
+    <script type="text/javascript" src="{% static 'js/jquery3.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/bootstrap.js' %}"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
 
   <body>
     {% block content %}{% endblock %}
-
-    <!--JavaScript at end of body for optimized loading-->
-    <script type="text/javascript" src="{% static "js/bootstrap.js" %}"></script>
   </body>
 </html>
