--- a/3.3_HomeWork/project/app/templates/stations.html
+++ b/3.3_HomeWork/project/app/templates/stations.html
@@ -6,7 +6,7 @@
         Для запуска на сервере, укажите свой API-ключ. Тестовый ключ НЕ БУДЕТ работать на других сайтах.
         Получить ключ можно в Кабинете разработчика: https://developer.tech.yandex.ru/keys/
     -->
-    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=6f2a9628-617c-4a0c-ac85-e9353cf43f9d" type="text/javascript"></script>
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=<Key>" type="text/javascript"></script>
     <script type="text/javascript">
       ymaps.ready(init);
 
