--- a/3.3_HomeWork/project/templates/app/stations_2.html
+++ b/3.3_HomeWork/project/templates/app/stations_2.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "app/base.html" %}
 {% load static %}
 {% block title %}Карта автобусных остановок{% endblock %}
 {% block head %}
@@ -32,7 +32,7 @@
     </script>
 {% endblock %}
 {% block content %}
-    <form method="GET" action="/stations/">
+    <form method="GET" action="/stations2/">
         <div class="row form-top">
             <div class="col-md-4 text-right align-middle form-top">
                 Выберите маршрут:
